INTENTO DE SUBDA DE ARCHIVOS EXCEL 06_02_2025

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -283,7 +283,7 @@
               <div class="px-3 py-2">
                 <span
                   class="font-semibold text-xs text-gray-800 dark:text-neutral-200"
-                  >{{item.unidad}}</span
+                  >{{item.Unidad}}</span
                 >
               </div>
             </td>
