--- a/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
@@ -63,6 +63,9 @@
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
                 Stock F
               </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+                Stock Resultante
+              </th>
             </tr>
           </thead>
           <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
