--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -79,11 +79,11 @@
                   data-hs-overlay="#hs-sign-out-alert"
                   class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
                 >
-                  @if (item.usuarioAsignado?.trim() == "" ) {
+                  @if (item.usuarioAsignado.trim() == "" ) {
                     Asignar
                   }
 
-                  @if (item.usuarioAsignado?.trim() != "") {
+                  @if (item.usuarioAsignado.trim() != "") {
                     Cambiar asignado
                   }
                 </a>
