--- a/src/app/Ui/Shared/Components/buttons/button-nuevo/button-nuevo.component.html
+++ b/src/app/Ui/Shared/Components/buttons/button-nuevo/button-nuevo.component.html
@@ -1,10 +1,5 @@
 <button
-    type="button"
-    aria-haspopup="dialog"
-    aria-expanded="false"
-    aria-controls="hs-sign-out-alert-small-window"
-    [attr.data-hs-overlay]="'#' + abrirModal"
-    class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
+  type="button" class="btn btn-primary flex gap-1 justify-center items-center" data-bs-toggle="modal" data-bs-target="#registrarInventario"
   >
     <svg
       class="shrink-0 size-4"
@@ -23,3 +18,5 @@
     </svg>
     Nuevo
   </button>
+
+
