--- a/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
@@ -1,74 +1,98 @@
-<div id="hs-sign-out-alert" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="hs-sign-out-alert-label">
-  <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-xl sm:w-full m-3 sm:mx-auto">
-    <div class="relative flex flex-col bg-white shadow-lg rounded-xl dark:bg-neutral-900">
-      <div class="absolute top-2 end-2">
-        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600" aria-label="Close" data-hs-overlay="#hs-sign-out-alert">
-          <span class="sr-only">Close</span>
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-        </button>
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="staticBackdrop"
+  data-bs-backdrop="static"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">
+          ASIGNAR INVENTARIO
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
-
-      <div class="p-4 sm:p-10 text-center overflow-y-auto">
-
+      <div class="modal-body">
         <form (ngSubmit)="onAsignarUsuario()" [formGroup]="formularioRegistro">
-          <div class="p-4  gap-8 text-center overflow-y-auto">
+          <div class="p-4 text-center overflow-y-auto">
             <div class="flex-1">
-              <div class="text-center">
-                <h3 id="hs-ai-modal-label" class="text-lg font-semibold text-gray-800 dark:text-neutral-200">
-                  ASIGNAR INVENTARIO
-                </h3>
-                <p class="text-sm text-gray-500 dark:text-neutral-500">
-                  Datos a registrar
-                </p>
+              <div
+                class="mt-0 mb-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5"
+              >
+                <div>
+                  <span
+                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    >Fecha Creación:</span
+                  >
+                  <span
+                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    >05/12/2024</span
+                  >
+                </div>
+
+                <div>
+                  <span
+                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    >Estado:</span
+                  >
+                  <span
+                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    >Activo</span
+                  >
+                </div>
+
+                <div>
+                  <span
+                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    >Ruc Empresa:</span
+                  >
+                  <span
+                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    >{{ rucEmpresa }}</span
+                  >
+                </div>
               </div>
 
-              <div class="mt-5 mb-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5">
-                <div>
-                  <span class="block text-xs uppercase text-gray-500 dark:text-neutral-500">Fecha Creación:</span>
-                  <span class="block text-sm font-medium text-gray-800 dark:text-neutral-200">05/12/2024</span>
-                </div>
-
-                <div>
-                  <span class="block text-xs uppercase text-gray-500 dark:text-neutral-500">Estado:</span>
-                  <span class="block text-sm font-medium text-gray-800 dark:text-neutral-200">Activo</span>
-                </div>
-
-                <div>
-                  <span class="block text-xs uppercase text-gray-500 dark:text-neutral-500">Ruc Empresa:</span>
-                  <span class="block text-sm font-medium text-gray-800 dark:text-neutral-200">{{rucEmpresa}}</span>
-                </div>
-              </div>
-
-              <mat-form-field>
-                <mat-label>Usuarios</mat-label>
-                <mat-select
+              <div class="mb-3">
+                <label for="usuarioAsignar" class="form-label">Usuario</label>
+                <select
+                id="usuarioAsignar"
                 formControlName="usuario"
-                [(ngModel)]="inventario.idusuario">
-                  @for (item of getUsuarios_All; track item) {
-                    <mat-option [value]="item.idusuario">{{item.idusuario}} - {{item.nombreusuario}}  {{item.apellido}}</mat-option>
-                  }
-                </mat-select>
-              </mat-form-field>
-            </div>
+                [(ngModel)]="inventario.idusuario"
+                class="form-select"
+                aria-label="Default select example"
+              >
+                @for (item of getUsuarios_All; track $index) {
+                <option [value]="item.idusuario">
+                  {{ item.idusuario }} - {{ item.nombreusuario }}
+                  {{ item.apellido }}
+                </option>
+                }
+              </select>
+              </div>
 
+
+            </div>
           </div>
 
           <div class="Buttons_eventos">
             <button
-
               type="button"
               class="button_cancelar"
-              data-hs-overlay="#hs-sign-out-alert"
+              data-bs-dismiss="modal"
             >
               Cancelar
             </button>
-            <button
-
-              type="submit"
-              class="py-2.5 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
-            >
-              Guardar
-            </button>
+            <button type="submit" class="btn btn-primary">Guardar</button>
           </div>
         </form>
       </div>
