--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,9 +1,7 @@
-<table
-class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700"
->
-<thead class="bg-gray-50 dark:bg-neutral-900">
-  <tr>
-    @for (item of encabezadoTable; track $index) {
+<table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+  <thead class="bg-gray-50 dark:bg-neutral-900">
+    <tr>
+      @for (item of encabezadoTable; track $index) {
       <th scope="col" class="px-6 py-3 text-start">
         <th-table-carga-inventario
           [descripcion]="item.title"
@@ -12,127 +10,87 @@ class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700"
           (ordenarDatos)="ordenarPor('descripcion')"
         />
       </th>
-    }
-    <th scope="col" class="px-6 py-3 text-end"></th>
-  </tr>
-</thead>
+      }
+      <th scope="col" class="px-6 py-3 text-end"></th>
+    </tr>
+  </thead>
 
-<tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-  @for (item of datosInventarioslista | paginate: { itemsPerPage:
-  10, currentPage: p }; track $index;) {
-  <tr>
-    <td class="size-px whitespace-nowrap">
-      <td-table-descripcion [descripcion]="item.descripcion" />
-    </td>
-    <td class="size-px whitespace-nowrap">
-      <td-table-usuario-creador
-        [descripcion]="item.usuariocreacion.toUpperCase()"
-      />
-    </td>
-    <td class="size-px whitespace-nowrap">
-      <td-estado-carga-inventario [estado]="item.estado" />
-    </td>
-    <td class="size-px whitespace-nowrap">
-      <td-table-fecha [descripcion]="item.fechacarga" />
-    </td>
+  <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+    @for (item of datosInventarioslista | paginate: { itemsPerPage: 10,
+    currentPage: p }; track $index;) {
+    <tr>
+      <td class="size-px whitespace-nowrap">
+        <td-table-descripcion [descripcion]="item.descripcion" />
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <td-table-usuario-creador
+          [descripcion]="item.usuariocreacion.toUpperCase()"
+        />
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <td-estado-carga-inventario [estado]="item.estado" />
+      </td>
 
-    <td class="size-px whitespace-nowrap">
-      <td-table-btn-detalle
-        [idcarga]="item.idcarga"
-        [rucempresa]="item.rucempresa"
-        (obtenerDetalle)="
-          ObtenerDetalleInventarios(
-            $event.rucempresa,
-            $event.idcarga
-          )
-        "
-      />
-    </td>
-    <td class="size-px whitespace-nowrap">
-      <div class="px-6 py-1.5">
-        <div
-          class="hs-dropdown [--placement:bottom-right] relative inline-block"
-        >
-
-        <!-- <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
-        <mat-menu #menu="matMenu">
-          <agregar-producto />
-              <opcion-table-asignar-usuario
-                [idcarga]="item.idcarga"
-                [rucempresa]="item.rucempresa"
-                (obtenerDetalle)="
-                  ObtenerDetatosInventarios(
-                    $event.rucempresa,
-                    $event.idcarga
-                  )
-                "
-              />
-        </mat-menu> -->
-          <button-ver-opciones-dropdown-carga-inventario (funcionEmitida)="verListOpciones()"/>
-          @if (showListOpciones) {
-            <div
-            aria-hidden="true"
-            class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 min-w-40 z-10 bg-white shadow-2xl rounded-lg p-2 mt-2 dark:divide-neutral-700 dark:bg-neutral-800 dark:border dark:border-neutral-700"
-            role="menu"
-            aria-orientation="vertical"
-            aria-labelledby="hs-table-dropdown-1"
+      <td class="size-px whitespace-nowrap">
+        <td-table-btn-detalle
+          [idcarga]="item.idcarga"
+          [rucempresa]="item.rucempresa"
+          (obtenerDetalle)="
+            ObtenerDetalleInventarios($event.rucempresa, $event.idcarga)
+          "
+        />
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <div class="px-6 py-1.5">
+          <div
+            class="hs-dropdown [--placement:bottom-right] relative inline-block"
           >
-            <div class="py-2 first:pt-0 last:pb-0">
-              <agregar-producto />
-              <opcion-table-asignar-usuario
-                [idcarga]="item.idcarga"
-                [rucempresa]="item.rucempresa"
-                (obtenerDetalle)="
-                  ObtenerDetatosInventarios(
-                    $event.rucempresa,
-                    $event.idcarga
-                  )
-                "
-              />
-            </div>
-            <div class="py-2 first:pt-0 last:pb-0">
-              <a
-                class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 dark:text-red-500 dark:hover:bg-neutral-700"
-                href="#"
+            <div class="dropdown">
+              <button
+                class="btn btn-primary dropdown-toggle"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
               >
-                Eliminar
-              </a>
+              </button>
+              <ul class="dropdown-menu">
+                <agregar-producto />
+                <opcion-table-asignar-usuario
+                  [idcarga]="item.idcarga"
+                  [rucempresa]="item.rucempresa"
+                  (obtenerDetalle)="
+                    ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
+                  "
+                />
+              </ul>
             </div>
           </div>
-          }
-
         </div>
-      </div>
-    </td>
-  </tr>
-  }
-</tbody>
+      </td>
+    </tr>
+    }
+  </tbody>
 </table>
-
 
 <!-- Footer -->
 <div
-class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
+  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
 >
-<div>
-  <p class="text-sm text-gray-600 dark:text-neutral-400">
-    <span
-      class="font-semibold text-gray-800 dark:text-neutral-200"
-      >{{ datosInventarioslista.length }}</span
-    >
-    Inventarios
-  </p>
-</div>
+  <div>
+    <p class="text-sm text-gray-600 dark:text-neutral-400">
+      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{
+        datosInventarioslista.length
+      }}</span>
+      Inventarios
+    </p>
+  </div>
 
-<div>
-  <div class="inline-flex gap-x-2">
-    <pagination-controls
-      (pageChange)="p = $event"
-    ></pagination-controls>
+  <div>
+    <div class="inline-flex gap-x-2">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
-</div>
-
 
 <footer-general />
 
