--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -1,201 +1,130 @@
 <div
-  id="hs-bg-reporte-pdf"
-  class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
-  role="dialog"
+  class="offcanvas offcanvas-end ancho"
   tabindex="-1"
-  aria-labelledby="hs-bg-gray-on-hover-cards-label"
+  id="disenoreporte"
+  aria-labelledby="disenoreporte"
 >
-  <div
-    class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-7xl sm:w-full m-3 h-[calc(100%-3.5rem)] sm:mx-auto"
-  >
+  <div class="offcanvas-header">
     <div
-      class="max-h-full flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-neutral-900 dark:border-neutral-800 dark:shadow-neutral-700/70"
+      id="hs-header-base"
+      class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block"
+      aria-labelledby="hs-header-base-collapse"
     >
       <div
-        class="flex justify-between items-center py-3 px-4 border-b dark:border-neutral-800"
+        class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500"
       >
-        <div class="container-header-pdf">
-
-
-
-
-
-
-
-          <!-- ========== HEADER ========== -->
-<header class="flex flex-wrap  md:justify-start md:flex-nowrap  w-full bg-white border-b border-gray-200 dark:bg-neutral-800 dark:border-neutral-700">
-  <nav class="relative max-w-[100rem] w-full border-none mx-auto md:flex md:items-center md:justify-between md:gap-3 py-2 px-4 sm:px-6 lg:px-8">
-    <div class="flex justify-between items-center gap-x-1">
-      <a class="flex-none font-semibold text-xl text-black focus:outline-none focus:opacity-80 dark:text-white"  aria-label="Brand">REPORTE</a>
-
-      <!-- Collapse Button -->
-      <!-- <button type="button" class="hs-collapse-toggle md:hidden relative size-9 flex justify-center items-center font-medium text-[12px] rounded-lg border border-gray-200 text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-neutral-700 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" id="hs-header-base-collapse"  aria-expanded="false" aria-controls="hs-header-base" aria-label="Toggle navigation"  data-hs-collapse="#hs-header-base" >
-        <svg class="hs-collapse-open:hidden size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" x2="21" y1="6" y2="6"/><line x1="3" x2="21" y1="12" y2="12"/><line x1="3" x2="21" y1="18" y2="18"/></svg>
-        <svg class="hs-collapse-open:block shrink-0 hidden size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-        <span class="sr-only">Toggle navigation</span>
-      </button> -->
-      <!-- End Collapse Button -->
-    </div>
-
-    <!-- Collapse -->
-    <div id="hs-header-base" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block "  aria-labelledby="hs-header-base-collapse" >
-      <div class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
-        <div class="py-2 md:py-0  flex flex-col md:flex-row md:items-center gap-0.5 md:gap-1">
+        <div
+          class="py-2 md:py-0 flex flex-col md:flex-row md:items-center gap-0.5 md:gap-1"
+        >
           <div class="grow">
-            <div class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1">
-
-
-              <button  (click)="inventarioSeleccionado(citaSeleccionada.rucempresa, citaSeleccionada.idcarga)" id="hs-header-base-mega-menu-fullwidth" type="button" class="hs-dropdown-toggle p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" aria-haspopup="menu" aria-expanded="false" aria-label="Mega Menu">
+            <div
+              class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1"
+            >
+              <button
+                (click)="
+                  inventarioSeleccionado(
+                    citaSeleccionada.rucempresa,
+                    citaSeleccionada.idcarga
+                  )
+                "
+                id="hs-header-base-mega-menu-fullwidth"
+                type="button"
+                class="hs-dropdown-toggle p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                aria-haspopup="menu"
+                aria-expanded="false"
+                aria-label="Mega Menu"
+              >
                 Descargar Solo detalle
-                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"></path>
+                <svg
+                  class="shrink-0 size-4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"
+                  ></path>
                   <path d="M12 12v9"></path>
                   <path d="m8 17 4 4 4-4"></path>
                 </svg>
               </button>
 
-              <button  (click)="inventarioSeleccionadoDisenio(citaSeleccionada.rucempresa, citaSeleccionada.idcarga)" id="hs-header-base-mega-menu-fullwidth" type="button" class="hs-dropdown-toggle p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" aria-haspopup="menu" aria-expanded="false" aria-label="Mega Menu">
+              <button
+                (click)="
+                  inventarioSeleccionadoDisenio(
+                    citaSeleccionada.rucempresa,
+                    citaSeleccionada.idcarga
+                  )
+                "
+                id="hs-header-base-mega-menu-fullwidth"
+                type="button"
+                class="hs-dropdown-toggle p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                aria-haspopup="menu"
+                aria-expanded="false"
+                aria-label="Mega Menu"
+              >
                 Descargar Completo
-                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"></path>
+                <svg
+                  class="shrink-0 size-4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"
+                  ></path>
                   <path d="M12 12v9"></path>
                   <path d="m8 17 4 4 4-4"></path>
                 </svg>
               </button>
-
-              <!-- End Mega Menu -->
-
-              <!-- <a class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
-                <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                Account
-              </a>
-
-              <a class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
-                <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12h.01"/><path d="M16 6V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v2"/><path d="M22 13a18.15 18.15 0 0 1-20 0"/><rect width="20" height="14" x="2" y="6" rx="2"/></svg>
-                Work
-              </a>
-
-              <a class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
-                <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"/><path d="M18 14h-8"/><path d="M15 18h-5"/><path d="M10 6h8v4h-8V6Z"/></svg>
-                Blog
-              </a> -->
             </div>
           </div>
-
-          <!-- <div class="my-2 md:my-0 md:mx-2">
-            <div class="w-full h-px md:w-px md:h-4 bg-gray-100 md:bg-gray-300 dark:bg-neutral-700"></div>
-          </div> -->
-
-          <!-- Button Group -->
-          <!-- <div class=" flex flex-wrap items-center gap-x-1.5">
-            <a class="py-[7px] px-2.5 inline-flex items-center font-medium text-sm rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 focus:outline-none focus:bg-gray-100 dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
-              Sign in
-            </a>
-            <a class="py-2 px-2.5 inline-flex items-center font-medium text-sm rounded-lg bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:bg-blue-600" href="#">
-              Get started
-            </a>
-          </div> -->
-          <!-- End Button Group -->
         </div>
       </div>
     </div>
-    <!-- End Collapse -->
-  </nav>
-</header>
-<!-- ========== END HEADER ========== -->
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="offcanvas"
+      aria-label="Close"
+    ></button>
+  </div>
+  <div class="offcanvas-body">
+    <!-- ================================================== -->
+    <!-- REPORTE - PORTADA -->
+    <!-- ================================================== -->
+    <design-page-portada [nombreInventario]="citaSeleccionada.descripcion" />
 
-
-
-
-        </div>
-
-        <button
-          type="button"
-          class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600"
-          aria-label="Close"
-          data-hs-overlay="#hs-bg-reporte-pdf"
-        >
-          <span class="sr-only">Close</span>
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M18 6 6 18" />
-            <path d="m6 6 12 12" />
-          </svg>
-        </button>
-      </div>
-
-      <div class="p-4 overflow-y-auto bg-gray-100">
-        <div  class="container-principal">
-          <!-- ================================================== -->
-          <!-- REPORTE - PORTADA -->
-          <!-- ================================================== -->
-          <design-page-portada [nombreInventario]="citaSeleccionada.descripcion" />
-
-          <!-- ================================================== -->
-          <!-- REPORTE - DATOS -->
-          <!-- ================================================== -->
-          <div class="container-datos">
-            <filtros-checkbox-tabla (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)" />
-            <design-page-tabla-datos [listaProductos]="citaSeleccionada.detalle" [columnasSeleccionadas]="columnasSeleccionadas"/>
-          </div>
-
-
-          <!-- ================================================== -->
-          <!-- REPORTE - FINAL -->
-          <!-- ================================================== -->
-          <design-page-final />
-
-
-        </div>
-      </div>
-
-
-
-
-
-      <div
-        class="flex justify-end items-center gap-x-2 py-3 px-4 border-t dark:border-neutral-800"
-      >
-        <a
-          class="inline-flex items-center gap-x-1 text-sm text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-        >
-          Más formatos
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="m9 18 6-6-6-6" />
-          </svg>
-        </a>
-      </div>
+    <!-- ================================================== -->
+    <!-- REPORTE - DATOS -->
+    <!-- ================================================== -->
+    <div class="container-datos">
+      <filtros-checkbox-tabla
+        (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)"
+      />
+      <design-page-tabla-datos
+        [listaProductos]="citaSeleccionada.detalle"
+        [columnasSeleccionadas]="columnasSeleccionadas"
+      />
     </div>
+
+    <!-- ================================================== -->
+    <!-- REPORTE - FINAL -->
+    <!-- ================================================== -->
+    <!-- <design-page-final /> -->
   </div>
 </div>
 
-<script>
-  window.addEventListener("load", () => {
-    setTimeout(() => {
-      document
-        .querySelectorAll(".hs-overlay")
-        .forEach((el) => HSOverlay.open(el));
-    });
-  });
-</script>
+
