--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -256,70 +256,35 @@
                     <div
                       class="hs-dropdown [--placement:bottom-right] relative inline-block"
                     >
-                      <button
-                        id="hs-table-dropdown-1"
-                        type="button"
-                        class="hs-dropdown-toggle py-1.5 px-2 inline-flex justify-center items-center gap-2 rounded-lg text-gray-700 align-middle disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:text-neutral-400 dark:hover:text-white dark:focus:ring-offset-gray-800"
-                        aria-haspopup="menu"
-                        aria-expanded="false"
-                        aria-label="Dropdown"
-                      >
-                        <svg
-                          class="shrink-0 size-4"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        >
-                          <circle cx="12" cy="12" r="1" />
-                          <circle cx="19" cy="12" r="1" />
-                          <circle cx="5" cy="12" r="1" />
-                        </svg>
-                      </button>
-                      <div
-                        aria-hidden="true"
-                        class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 min-w-40 z-10 bg-white shadow-2xl rounded-lg p-2 mt-2 dark:divide-neutral-700 dark:bg-neutral-800 dark:border dark:border-neutral-700"
-                        role="menu"
-                        aria-orientation="vertical"
-                        aria-labelledby="hs-table-dropdown-1"
-                      >
-                        <div class="py-2 first:pt-0 last:pb-0">
-
+                      <div class="dropdown">
+                        <button
+                          class="btn btn-primary dropdown-toggle"
+                          type="button"
+                          data-bs-toggle="dropdown"
+                          aria-expanded="false"
+                        ></button>
+                        <ul class="dropdown-menu">
                           <descargar-reporte-excel
                             [rucEmpresa]="item.rucempresa"
                             [idCarga]="item.idcarga"
                           />
 
-                          <a
-                          class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                          (click)="
-                            inventarioSeleccionado(
-                              item.rucempresa,
-                              item.idcarga
-                            )
-                          "
-                          data-hs-overlay="#hs-bg-reporte-pdf"
-                        >
-                          PDF
-                        </a>
-                          <!-- <descargar-reporte-pdf
-                            [rucEmpresa]="item.rucempresa"
-                            [idCarga]="item.idcarga"
-                          /> -->
-                        </div>
-                        <div class="py-2 first:pt-0 last:pb-0">
-                          <a
-                            class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 dark:text-red-500 dark:hover:bg-neutral-700"
-                            href="#"
+                          <button
+                            class="btn btn-secondary w-full"
+                            (click)="
+                              inventarioSeleccionado(
+                                item.rucempresa,
+                                item.idcarga
+                              )
+                            "
+                            type="button"
+                            data-bs-toggle="offcanvas"
+                            data-bs-target="#disenoreporte"
+                            aria-controls="offcanvasRight"
                           >
-                            Eliminar
-                          </a>
-                        </div>
+                            PDF
+                          </button>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -363,4 +328,7 @@
 </div>
 <!-- End Table Section -->
 
-<design-report-inventario [citaSeleccionada]="InventarioSeleccionado" />
+<design-report-inventario
+  [citaSeleccionada]="InventarioSeleccionado"
+  [detalleProductos]="listaProductos"
+/>
