detalle articulos para reporte visibles

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -115,7 +115,7 @@
         (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)"
       />
       <design-page-tabla-datos
-        [listaProductos]="citaSeleccionada.detalle"
+        [listaProductos]="detalleProductos"
         [columnasSeleccionadas]="columnasSeleccionadas"
       />
     </div>
