11_02_2025 REPORTE PDF DETALLE

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -54,14 +54,17 @@
               >
               </button>
               <ul class="dropdown-menu">
-                <agregar-producto />
-                <opcion-table-asignar-usuario
-                  [idcarga]="item.idcarga"
-                  [rucempresa]="item.rucempresa"
-                  (obtenerDetalle)="
-                    ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
-                  "
-                />
+                <div class="flex flex-col">
+                  <agregar-producto />
+                  <opcion-table-asignar-usuario
+                    [idcarga]="item.idcarga"
+                    [rucempresa]="item.rucempresa"
+                    (obtenerDetalle)="
+                      ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
+                    "
+                  />
+                </div>
+
               </ul>
             </div>
           </div>
