--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -34,7 +34,7 @@
                 aria-expanded="false"
                 aria-label="Mega Menu"
               >
-                Descargar Solo detalle
+                Descargar PDF
                 <svg
                   class="shrink-0 size-4"
                   xmlns="http://www.w3.org/2000/svg"
@@ -55,7 +55,7 @@
                 </svg>
               </button>
 
-              <button
+              <!-- <button
                 (click)="
                   inventarioSeleccionadoDisenio(
                     citaSeleccionada.rucempresa,
@@ -88,7 +88,7 @@
                   <path d="M12 12v9"></path>
                   <path d="m8 17 4 4 4-4"></path>
                 </svg>
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
     <!-- ================================================== -->
     <!-- REPORTE - PORTADA -->
     <!-- ================================================== -->
-    <design-page-portada [nombreInventario]="citaSeleccionada.descripcion" />
+    <design-page-portada  [nombreInventario]="citaSeleccionada.descripcion" />
 
     <!-- ================================================== -->
     <!-- REPORTE - DATOS -->
