--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-producto-new-inventario/registro-producto-new-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-producto-new-inventario/registro-producto-new-inventario.component.html
@@ -1,4 +1,323 @@
-<div
+<div class="offcanvas offcanvas-end ancho" tabindex="-1" id="newProducts" aria-labelledby="newProducts">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="newProducts">Offcanvas right</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <form>
+      <div class="p-4 gap-8 text-center overflow-y-auto">
+        <div class="flex-1">
+          <div class="text-center">
+            <h3
+              id="hs-ai-modal-label"
+              class="text-lg font-semibold text-gray-800 dark:text-neutral-200"
+            >
+              REGISTRAR PRODUCTO NUEVO INVENTARIO
+            </h3>
+            <p class="text-sm text-gray-500 dark:text-neutral-500">
+              Datos a registrar
+            </p>
+          </div>
+
+          <div
+            class="mt-5 mb-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5"
+          >
+            <div>
+              <span
+                class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                >Fecha Creación:</span
+              >
+              <span
+                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                >05/12/2024</span
+              >
+            </div>
+
+            <div>
+              <span
+                class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                >Estado:</span
+              >
+              <span
+                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                >Activo</span
+              >
+            </div>
+
+            <div>
+              <span
+                class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                >Ruc Empresa:</span
+              >
+              <span
+                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                >10733567363</span
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="flex-col lg:flex lg:gap-6 lg:flex-row">
+          <div class="flex-1">
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                sucursal
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+          </div>
+
+          <div class="flex-1">
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+          </div>
+
+          <div class="flex-1">
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+          </div>
+
+          <div class="flex-1">
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="Buttons_eventos">
+        <button
+          type="button"
+          class="button_cancelar"
+          data-hs-overlay="#hs-sign-out-alert-mas-productos"
+        >
+          Cancelar
+        </button>
+        <button
+          type="submit"
+          class="py-2.5 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
+        >
+          Guardar
+        </button>
+        <!-- [disabled]="!formularioRegistro.valid" -->
+      </div>
+    </form>
+  </div>
+</div>
+
+
+
+
+
+
+<!-- <div
   id="hs-sign-out-alert-mas-productos"
   class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto"
   role="dialog"
@@ -340,10 +659,10 @@
             >
               Guardar
             </button>
-            <!-- [disabled]="!formularioRegistro.valid" -->
+
           </div>
         </form>
       </div>
     </div>
   </div>
-</div>
+</div> -->
