--- a/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
@@ -7,20 +7,12 @@
     </h1>
     <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
       Ingresa a tu sistema de control de inventario
-      <!-- <a
-        class="text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-        href="../examples/html/signup.html"
-      >
-        DB INVENTORY
-      </a> -->
     </p>
   </div>
 
-  <div class="mt-5">
-    <!-- Form -->
-    <form [formGroup]="loginForm">
+  <div class="mt-1">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="grid gap-y-4">
-        <!-- Form Group: RUC -->
         <div>
           <label
             for="rucempresa"
@@ -32,14 +24,13 @@
               type="text"
               id="rucempresa"
               formControlName="rucempresa"
-              class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
               required
               aria-describedby="rucempresa-error"
             />
           </div>
         </div>
 
-        <!-- Form Group: Usuario -->
         <div>
           <label
             for="username"
@@ -51,14 +42,13 @@
               type="text"
               id="username"
               formControlName="idUsuario"
-              class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
               required
               aria-describedby="username-error"
             />
           </div>
         </div>
 
-        <!-- Form Group: Contraseña -->
         <div>
           <label
             for="password"
@@ -70,7 +60,7 @@
               type="password"
               id="password"
               formControlName="contrasenia"
-              class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
               required
               aria-describedby="password-error"
             />
@@ -79,13 +69,18 @@
 
         <button
           type="submit"
-          (click)="onSubmit()"
           class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
         >
           Ingresar
         </button>
       </div>
     </form>
-    <!-- End Form -->
+
   </div>
+
 </div>
+
+
+  <div [class]="claseErrorVisible" role="alert">
+    {{errorMessage}}
+  </div>
