--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -261,7 +261,7 @@
               <div class="px-3 py-2">
                 <span
                   class="font-semibold text-xs text-gray-800 dark:text-neutral-200"
-                  >{{item.codigobarra}}</span
+                  >{{item.Codigobarra}}</span
                 >
               </div>
             </td>
