--- a/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
@@ -1,133 +1,111 @@
-<div id="hs-detalle-excel_preview" class="hs-overlay hs-overlay-backdrop-open:bg-gray-900/70 hidden size-full fixed top-0 start-0 z-[85] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-stacked-overlays-2-label">
-  <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-6xl sm:w-full m-3 sm:mx-auto">
-
-    <div class="overflow-hidden flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-neutral-800 dark:border-neutral-700 dark:shadow-neutral-700/70">
-      <div class="bg-fondo-detalle h-[5rem] flex justify-between items-center py-3 px-4 border-b dark:border-neutral-700">
-        <h3 id="hs-stacked-overlays-2-label" class="font-bold titulo-detalle dark:text-white">
-          Preview <span>Datos</span>
-        </h3>
-        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600" aria-label="Close" data-hs-overlay="#hs-detalle-excel_preview" data-hs-overlay-options='{
-          "isClosePrev": false
-        }'>
-          <span class="sr-only">Close</span>
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M18 6 6 18"></path>
-            <path d="m6 6 12 12"></path>
-          </svg>
-        </button>
-      </div>
-
-      <div class="p-4 max-h-[30rem] overflow-y-auto">
-        <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
-          <thead class="bg-gray-100 dark:bg-neutral-800">
-            <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Almacen
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Sucursal
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Zona
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Pasillo
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Rack
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Ubicación
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Esagrupado
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                CodigoGrupo
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                CodigoProducto
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                CodigoBarra
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Descripción Producto
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Unidad
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Stock L
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Stock F
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
-                Stock Resultante
-              </th>
+<div class="offcanvas offcanvas-end ancho" tabindex="-1" id="hs-detalle-excel_preview" aria-labelledby="hs-detalle-excel_preview">
+  <div class="offcanvas-header bg-fondo-detalle">
+    <h5 class="offcanvas-title titulo-detalle" id="hs-detalle-excel_preview">Preview <span>Datos</span></h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body max-h-full overflow-y-auto">
+    <div class="p-4 ">
+      <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
+        <thead class="bg-gray-100 dark:bg-neutral-800">
+          <tr>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Almacen
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Sucursal
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Zona
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Pasillo
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Rack
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Ubicación
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Esagrupado
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              CodigoGrupo
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              CodigoProducto
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              CodigoBarra
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Descripción Producto
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Unidad
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Stock L
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Stock F
+            </th>
+            <th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-neutral-300">
+              Stock Resultante
+            </th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+          @for (item of excelData; track $index)
+          {
+            <tr class="hover:bg-gray-50 dark:hover:bg-neutral-800">
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.almacen }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.sucursal }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.zona }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.pasillo }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.rack }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.ubicacion }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.esagrupado }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.codigogrupo }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.codigoproducto }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.codigobarra }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.descripcionproducto }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.unidad }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.stockL }}
+              </td>
+              <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
+                {{ item.stockF }}
+              </td>
             </tr>
-          </thead>
-          <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-            @for (item of excelData; track $index)
-            {
-              <tr class="hover:bg-gray-50 dark:hover:bg-neutral-800">
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.almacen }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.sucursal }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.zona }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.pasillo }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.rack }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.ubicacion }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.esagrupado }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.codigogrupo }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.codigoproducto }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.codigobarra }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.descripcionproducto }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.unidad }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.stockL }}
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 dark:text-neutral-100">
-                  {{ item.stockF }}
-                </td>
-              </tr>
-            }
+          }
 
-          </tbody>
-        </table>
-      </div>
-
-      <div class="flex justify-end items-center gap-x-2 py-3 px-4 border-t dark:border-neutral-700">
-        <button data-hs-overlay="#hs-detalle-excel_preview" type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" data-hs-overlay="#hs-stacked-overlays-2" data-hs-overlay-options='{
-          "isClosePrev": false
-        }'>
-          Cerrar
-        </button>
-      </div>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
