--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -3,5 +3,5 @@
     <img src="../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="search">
   </div>
   <h3 class="md:flex-1">OPCIONES <span>INVENTARIO</span></h3>
-  <button (click)="logout()" class="border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE] ">Salir</button>
+  <button  class="border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE] ">Salir</button>
 </div>
